--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "4",
+    "eslint": "7",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-promise": "4",
     "git-commit-msg-linter": "^3.1.0",
     "typescript": "^4.2.3"
   }
