--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "2",
     "eslint-plugin-node": "11",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "4",
     "git-commit-msg-linter": "^3.1.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
 }
