--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,7 @@
 {
   "./**/*.{js,ts}": [
     "prettier --write './**/*.{js,ts,md}' --config ./.prettierrc.json",
-    "eslint '*/**/*.{js,ts}' --quiet --fix"
+    "eslint '*/**/*.{js,ts}' --quiet --fix",
+    "git add"
   ]
 }
