--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,11 @@
 {
-  "extends": [
-    "standard-with-typescript"
-  ],
+  "extends": ["standard-with-typescript", "prettier"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
+  "plugins": ["prettier"],
   "rules": {
-    "no-console": 1,       // Means warning
-    "prettier": {
-      "space-before-function-paren": 0,
-      "prettier": 2
-    }
+    "no-console": "warn", // Means warning
+    "prettier/prettier": "error"
   }
 }
