--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "main": "index.js",
   "author": "Bruno Lombardi <bruno@kuppi.com.br>",
   "license": "MIT",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
@@ -20,7 +17,6 @@
     "eslint-plugin-node": "11",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "4",
-    "git-commit-msg-linter": "^3.1.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
