--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,6 @@
 {
   "*.{js,ts}": [
     "prettier --write './**/*.{js,ts,md}' --config ./.prettierrc.json",
-    "eslint '*/**/*.{js,ts}' --quiet --fix",
-    "git add"
+    "eslint '*/**/*.{js,ts}' --quiet --fix"
   ]
 }
