chore: correctly configued husky v6 hooks for commits

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test:unit": "yarn test --watch -c jest-unit-config.js",
     "test:integration": "yarn test --watch -c jest-integration-config.js",
     "test:staged": "yarn test --findRelatedTests",
-    "test:ci": "yarn test --coverage"
+    "test:ci": "yarn test --coverage",
+    "postinstall": "husky install"
   }
 }
