feat: implement email validator adapter, changed eslint and jest config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
     "@typescript-eslint/naming-convention": [
       "warn",
       {
-        "format": ["camelCase", "snake_case"]
+        "selector": "default",
+        "format": ["camelCase", "snake_case", "PascalCase"]
       }
     ]
   }
