--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
     "eslint-config-prettier": "^8.1.0",
@@ -28,10 +29,13 @@
   },
   "scripts": {
     "test": "jest --passWithNoTests --silent --runInBand",
-    "test:unit": "yarn test --watch -c jest-unit-config.js",
-    "test:integration": "yarn test --watch -c jest-integration-config.js",
+    "test:unit": "yarn test --watch -c jest-unit-config.ts",
+    "test:integration": "yarn test --watch -c jest-integration-config.ts",
     "test:staged": "yarn test --findRelatedTests",
     "test:ci": "yarn test --coverage",
     "postinstall": "husky install"
+  },
+  "dependencies": {
+    "validator": "^13.5.2"
   }
 }
