feat: db add account use case implementation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,13 @@
         "selector": "default",
         "format": ["camelCase", "snake_case", "PascalCase"]
       }
+    ],
+    "@typescript-eslint/consistent-type-assertions": [
+      "warn",
+      {
+        "assertionStyle": "as",
+        "objectLiteralTypeAssertions": "allow"
+      }
     ]
   }
 }
