--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@types/bcrypt": "^3.0.1",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/validator": "^13.1.3",
@@ -36,6 +37,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "validator": "^13.5.2"
   }
 }
