--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.1",
     "@types/jest": "^26.0.22",
+    "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.37",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "4",
@@ -38,6 +40,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "mongodb": "^3.6.6",
     "validator": "^13.5.2"
   }
 }
