feat: create AccountMongoRepository and ensure it inserts to the database

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
       "warn",
       {
         "selector": "default",
-        "format": ["camelCase", "snake_case", "PascalCase"]
+        "format": ["camelCase", "snake_case", "PascalCase"],
+        "leadingUnderscore": "allow"
       }
     ],
     "@typescript-eslint/consistent-type-assertions": [
