--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
   },
   "plugins": ["prettier"],
   "rules": {
-    "no-console": "warn", // Means warning
+    "no-console": 0, // Means warning
     "prettier/prettier": "error",
     "@typescript-eslint/strict-boolean-expressions": 0,
     "@typescript-eslint/naming-convention": [
