--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.1",
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.37",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
@@ -26,11 +28,14 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
+    "sucrase": "^3.18.1",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "yarn test --watch -c jest-unit-config.ts",
@@ -41,6 +46,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "validator": "^13.5.2"
   }
