test: account repository and mongo helper integration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,12 @@
         "assertionStyle": "as",
         "objectLiteralTypeAssertions": "allow"
       }
+    ],
+    "@typescript-eslint/no-misused-promises": [
+      "error",
+      {
+        "checksVoidReturn": false
+      }
     ]
   }
 }
