test: integration of authentication usecase and load account repository

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,9 @@
       {
         "checksVoidReturn": false
       }
+    ],
+    "@typescript-eslint/no-floating-promises": [
+      "off"
     ]
   }
 }
