--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/bcrypt": "^3.0.1",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.37",
     "@types/supertest": "^2.0.11",
@@ -48,6 +49,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "fast-glob": "^3.2.5",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "validator": "^13.5.2"
   }
