--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "sucrase": "^3.18.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
@@ -36,7 +37,10 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "start": "sucrase-node src/main/server.ts",
+    "start": "node dist/main/server.js",
+    "prebuild": "rimraf dist",
+    "build": "tsc",
+    "dev": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "yarn test --watch -c jest-unit-config.ts",
